# pysolarmanv5

./: .gitignore  .readthedocs.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: black.yml  docker.yml  pytest.yml
docs/: api_reference.rst  conf.py  examples.rst  index.rst  requirements.txt  solarmanv5_protocol.rst  utilities.rst
docs/_static/css/: custom.css
examples/: async_client_example.py  client_example.py  register_scan.py  solarman_proxy.py
pysolarmanv5/: __init__.py  pysolarmanv5.py  pysolarmanv5_async.py
tests/: setup_test.py  test_aio_solarman.py  test_solarman.py
utils/: solarman_decoder.py  solarman_discovery.py  solarman_discovery_reply.py  solarman_rtu_proxy.py  solarman_scan.py  solarman_tcp_proxy.py  solarman_uni_scan.py
